# judas

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  engine  needed-stuff.txt
captures/: capture1.rdc  capture2.rdc  capture3_found_issue.rdc  capture4.rdc
include/font/: font.c
include/glad/: glad.h
plans/: 12_07_2025.txt  14_07_2025.txt  15_07_2025.txt
src/: deps.h  glad.c  main  main.cpp  main.rs  master.c  master.cpp  text.cpp  utils.h
src/headers/: shader.h
src/logic/: card.rs  mod.rs  table.rs
src/shaders/: compile.sh  frag.glsl  frag_objects.glsl  frag_plane.glsl  get_shaders.c  get_shaders.h  shader_m.h  transform.fs  vert.glsl  vertex.vs
src/shaders/opengl_stuff/: frag_light.glsl  shader2.h  vert_light.glsl  vert_plane.glsl
src/shaders/vulkan/: vulkan.vert
src/shaders/vulkan_stuff/: include_shader.cpp  include_shader.hpp  vulkan.vert.spv
src/ui/: load.cpp
src/window/: first.cpp  first.hpp  window.cpp  window.hpp
