[package]
name = "engine_active"
version = "0.1.0"
edition = "2024"

[dependencies]
glad-gl = { path = "./src/support/build/glad-gl" }
glfw = "0.59.0"
# for casting plain data types
bytemuck = "1"
# png parser
imagine = "0.0.5"
# linear algebra 
ultraviolet = { version = "0.9", features = [ "f64", "int" ] }
